--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 
 <body>
   <h1>Gastón Artaza</h1>
-  <img src="" alt="" srcset="">
-
+  <img src="https://avatars.githubusercontent.com/u/55330161?v=4" alt="profile photo Gastón Artaza" width="80"
+    height="80">
 </body>
 
 </html>
