add main content

--- a/index.html
+++ b/index.html
@@ -5,13 +5,40 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/55330161?v=4" type="image/x-icon">
   <title>Gastón Artaza CV</title>
 </head>
 
 <body>
-  <h1>Gastón Artaza</h1>
-  <img src="https://avatars.githubusercontent.com/u/55330161?v=4" alt="profile photo Gastón Artaza" width="80"
-    height="80">
+  <header>
+    <figure>
+      <img src="https://avatars.githubusercontent.com/u/55330161?v=4" alt="profile photo Gastón Artaza" width="80"
+        height="80">
+    </figure>
+    <h1>Gastón Artaza</h1>
+  </header>
+  <main>
+    <section>
+      <h2>Experiencia Profesional</h2>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit eaque aut itaque maxime, repellat rerum harum
+        architecto facere voluptatibus soluta dolorum eius ea ducimus. Corporis impedit minima placeat ex odit?</p>
+    </section>
+    <section>
+      <h2>Formación</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, ullam. Quia, neque mollitia vero tempora
+        consequatur deleniti tempore et nulla aliquid in dicta? Dicta perferendis magnam possimus quaerat facere. Nisi?
+      </p>
+    </section>
+    <section>
+      <h2>Contacto</h2>
+      <ul>
+        <li>Email: gastonartaza@gmail.com</li>
+        <li>Movil: 678983006</li>
+        <li> <a target="_blank" href="https://www.linkedin.com/in/gaston-artaza-frontend-developer/">Linkedin:</a></li>
+      </ul>
+    </section>
+  </main>
+
 </body>
 
 </html>
