add work experience list

--- a/index.html
+++ b/index.html
@@ -20,8 +20,21 @@
   <main>
     <section>
       <h2>Experiencia Profesional</h2>
-      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odit eaque aut itaque maxime, repellat rerum harum
-        architecto facere voluptatibus soluta dolorum eius ea ducimus. Corporis impedit minima placeat ex odit?</p>
+      <ul>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste, quia, reprehenderit dicta dignissimos ratione
+          architecto optio sit pariatur, ipsa error et vitae dolore. Doloribus officiis odit quaerat eveniet eos
+          tempore?</li>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse id facere voluptatum, magni cupiditate nihil
+          recusandae omnis, consectetur reiciendis accusamus blanditiis. Rerum neque amet, praesentium blanditiis fugiat
+          facere exercitationem sapiente!</li>
+        <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia accusantium expedita ipsum sapiente unde
+          deleniti facilis molestiae necessitatibus sint officia ab temporibus molestias cum aliquam aliquid maxime,
+          labore, placeat consequuntur?</li>
+        <li>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil perspiciatis laborum et consequatur autem
+          officiis velit alias aut corrupti, magnam praesentium necessitatibus, a veniam eligendi odio temporibus
+          tenetur voluptatibus amet.</li>
+      </ul>
+
     </section>
     <section>
       <h2>Formación</h2>
